CONFIGURAÇÂO- FONTWOSOME- FONT-GOOGLE

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,13 +5,17 @@
 </ion-header>
 
 <ion-content padding>
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+
+  <h1>Eneylton Barros</h1>
+  <h2>eneylton de jesus campos barros</h2>
+
+  <button ion-button icon-only small color="danger">    
+    <ion-icon class="fa-battery-1"></ion-icon>   
+ </button>    
+ <button ion-button icon-only color="primary">    
+    <ion-icon class="fa-battery-2"></ion-icon>   
+ </button>   
+ <button ion-button icon-only large color="secondary">    
+    <ion-icon class="fa-battery-full"></ion-icon>   
+ </button>
 </ion-content>
